samples/_failures_safe/1761511023_509b24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd967047.c: In function ‘tokenize’:
./samples/SAFE/__tmp_cd967047.c:162:26: error: ‘TOKEN’ undeclared (first use in this function)
  162 |             token.type = TOKEN
      |                          ^~~~~
./samples/SAFE/__tmp_cd967047.c:162:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_cd967047.c:162:31: error: expected ‘;’ at end of input
  162 |             token.type = TOKEN
      |                               ^
      |                               ;
./samples/SAFE/__tmp_cd967047.c:162:13: error: expected declaration or statement at end of input
  162 |             token.type = TOKEN
      |             ^~~~~
./samples/SAFE/__tmp_cd967047.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cd967047.c:162:13: error: expected declaration or statement at end of input
